infrastructure/apisix/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ingress-devops
  labels:
    pod-security.kubernetes.io/enforce: restricted
